--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			//viewer.toggleSidebar();
 		});
 		
-		viewer.setDescription(`</a><br><a href="https://coatzadrone.com/es/"><img src="https://static.wixstatic.com/media/e47f2e_b996a46c6b3746ee9623a625a788bd28~mv2.png/v1/fill/w_300,h_96,al_c,q_85,usm_0.66_1.00_0.01/LOGO%20COATZADRONE_2.webp" width="300"></a> `);
+		//viewer.setDescription(`</a><br><a href="https://coatzadrone.com/es/"><img src="https://static.wixstatic.com/media/e47f2e_b996a46c6b3746ee9623a625a788bd28~mv2.png/v1/fill/w_300,h_96,al_c,q_85,usm_0.66_1.00_0.01/LOGO%20COATZADRONE_2.webp" width="300"></a> `);
 
 		Potree.loadPointCloud("pointclouds/index/cloud.js", "Nube de puntos clasificada", e => {
 			let pointcloud = e.pointcloud;
